<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="@color/paleta_principal"
    android:paddingLeft="4dp"
    android:paddingTop="4dp"
    android:paddingRight="4dp"
    android:paddingBottom="4dp"
    tools:context=".MainActivity">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="200dp">

    </com.google.android.material.chip.ChipGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="217dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnVoltarMain"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:background="@drawable/home24px"
        android:tint="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btnHistorico"
        android:layout_width="45dp"
        android:layout_height="35dp"
        android:background="@drawable/history24px"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:tint="#FFC107"
        app:backgroundTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnConfiguracoes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnVoltarMain"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/btnConfiguracoes"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_settings_24px"
        android:tint="#FFFFFF"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />


    <TextView
        android:id="@+id/proxVez"
        android:layout_width="156dp"
        android:layout_height="49dp"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/semana"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHistorico"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/proxVez2"
        android:layout_width="264dp"
        android:layout_height="53dp"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/Mes"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proxVez"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/proxVez3"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/Ano"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proxVez2"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/proxVez4"
        android:layout_width="149dp"
        android:layout_height="37dp"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/relatorio"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proxVez3"
        app:layout_constraintVertical_bias="0.259" />

    <TextView
        android:id="@+id/proxVez5"
        android:layout_width="168dp"
        android:layout_height="38dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/mediadiaria"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proxVez4"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/proxVez9"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/Dadodiario"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/proxVez5"
        app:layout_constraintTop_toBottomOf="@+id/proxVez4"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/proxVez11"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/Dadossemanal"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/proxVez5"
        app:layout_constraintTop_toTopOf="@+id/proxVez9"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/proxVez12"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/Dadomes"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/proxVez5"
        app:layout_constraintTop_toTopOf="@+id/proxVez9"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/proxVez13"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/Dadosanual"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/proxVez5"
        app:layout_constraintTop_toTopOf="@+id/proxVez9"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/proxVez6"
        android:layout_width="168dp"
        android:layout_height="37dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/Mediasemanal"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/proxVez5"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/proxVez7"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/Mediamensal"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proxVez4"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/proxVez8"
        android:layout_width="166dp"
        android:layout_height="41dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/Mediaanual"
        android:textColor="#FFFFFF"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/proxVez5"
        app:layout_constraintVertical_bias="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>